FIx: style CSS: Profile Pic overflow

--- a/css/style.css
+++ b/css/style.css
@@ -536,7 +536,7 @@ textarea {
   .header__logo-img {
     width: 100%;
     height: 100%;
-    object-fit: cover;
+    object-fit: contain;
     object-position: center;
     display: block; }
   .header__logo-sub {
